@@ -14,8 +14,6 @@ import javax.swing.*;
 import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
 import edu.colorado.phet.common.phetcommon.resources.PhetVersion;
 import edu.colorado.phet.common.phetcommon.servicemanager.PhetServiceManager;
-import edu.colorado.phet.common.phetcommon.tracking.ActionPerformedMessage;
-import edu.colorado.phet.common.phetcommon.tracking.TrackingManager;
 import edu.colorado.phet.common.phetcommon.view.util.EasyGridBagLayout;
 import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
 
@@ -63,9 +61,7 @@ public abstract class AbstractUpdateDialog extends JDialog {
         JLabel tryItLink = new JLabel( tryItHtml );
         tryItLink.setCursor( Cursor.getPredefinedCursor( Cursor.HAND_CURSOR ) );
         tryItLink.addMouseListener( new MouseAdapter() {
-
             public void mousePressed( MouseEvent e ) {
-                TrackingManager.postActionPerformedMessage( ActionPerformedMessage.UPDATES_TRY_IT_PRESSED );
                 PhetServiceManager.showSimPage( project, sim );
             }
         } );
